pDLNA CHANGELOG
(c) 2010-2012 Stefan Heumader
email: stefan@heumader.at
webpage: http://www.pdlna.com

Licened under GPLv3 (see LICENSE file)

-----------------------------------------

Version 0.51.0
xx-May-2012

- added support for additional playlist files (audio/x-ms-asx, video/x-ms-asf, application/xspf+xml)
- fixed a bug regarding ignoring SSDP messages from not allowed clients

Version 0.50.0
28-Mar-2012

- added support for video/x-theora+ogg, audio/x-wav, audio/ac3, audio/x-aiff and video/x-flv Mime-Types
- removed PDLNA::ContentExternal Perl Module and integrated external scripts into PDLNA::ContentItem Perl Modul
- modified configuring External blocks (see sample configuration or configuration guide)
- added configuring network streams in External blocks (StreamingURL)
- refractured PDLNA::HTTPServer::stream_media() function
- added FFmpegBinaryPath configuration parameter for path to installed FFmpeg binary
- added Transcoding Profiles for audio files (see configuration guide for supported profiles)
- added support for network streams as elements of Playlist files
- added dummy responses for GetSearchCapabilities, GetSortCapabilities and GetSystemUpdateID SOAP requests
- added checking for valid MPlayer and FFmpeg installation
- added generation of DLNA contentfeature parameter

Version 0.46.0
13-Mar-2012

- added UUID configuration parameter for choosing method to generate UUID
- fixed a bug ignoring lost+found directories
- added support for .srt subtitle files (SubRip or application/x-subrip) for Samsung TV
- improvements to DirectoryListings (interpreting some of the filters)
- PROGRAM_BETA to CONFIG hash and print_version() to PDLNA::Config module
- changed default value for EnableImageThumbnails from enabled to disabled to be conform to EnableVideoThumbnails
- default value for AllowedClients is set to the local subnet
- fixed a bug regarding default value for LogFileMaxSize

Version 0.45.0
19-Jan-2012
