@@ -3,7 +3,7 @@
 - enable/disable website library (is it useful?)
 - website library: maybe we should do a webapp for remote control (ControlPoint)
 - dvd support (basic support is existing)
-- seeking support (seeking works in most cases, why not in all?)
+- seeking support (seeking works in most cases, why not in all? which ones?)
 - more subtitle support (text/x-subviewer)
 - transcode subtitle files
 - implement specificViews (samsung feature)
@@ -11,9 +11,11 @@
 - transcoding (more audio codecs and video transcoding)
 - per client transcoding profiles
 - per client directory configuration
-- dynamic rebuild of ContentDirectory
 - improve performance of crawling directories
+- when recrawling directories - just recrawl the changed ones (sha1 sum ...)
 - debian package, repo, rpm packages, ...
 - random music directory
 - more playlist support: Windows Media Player Playlist
 - set bookmark soap action (X_SetBookmark)
+- ReuseAddr parameter for both SSDP sockets (working depends on installed modules and Perl version) - How to handle it?
+- change PDLNA::DeviceList - lets do it not only by ip address - include uuid too (two different clients on one host?)
