@@ -1,1 +1,1 @@
-0.51.0b (2012-May-xx)
+0.51.0 (2012-May-16)
