@@ -170,8 +170,18 @@ LogCategory		discovery,httpdir,httpstream,library,httpgeneric
 #DateFormat		'%Y-%m-%d %H:%M:%S'
 
 #
-# MEDIA DIRECTORIES
+# MEDIA CONFIGURATION
 #
+
+# RescanMediaInterval
+# specify the interval, when pDLNA should recrawl and rebuild
+# the media directories
+# available parameters
+#  never
+#  hourly
+#  daily
+# if none is specified, it will be set to daily
+#RescanMediaInterval	daily
 
 # Directory
 # specify directories which should be added to library, which will be crawled for supported Mime Types
